--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ body, html {
     margin:0 auto;
     width:78%;
     height: 100%;
-    background: #00ff00;
+    /* background: #00ff00; */
 }
 
 #right {
@@ -44,26 +44,26 @@ body, html {
 }
 
 #github {
-    width: 50%;
+    width: 40%;
     margin-top: 20px;
 }
 
 #stackoverflow {
-    width: 80%;
+    width: 60%;
 }
 
 #twitter {
-    width: 50%;
+    width: 40%;
 }
 
 #header {
     width: 100%;
     height: 80px;
-    background-color: #0000ff;
+    /* background-color: #0000ff; */
 }
 
 #content-body {
-    background-color: #0000af;
+    /* background-color: #0000af; */
 }
 
 #profile-container {
@@ -96,6 +96,7 @@ body, html {
     font-size: 20px;
     text-align: left;
     padding-left: 20px;
+    width: 100%
 }
 
 #description {
