--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,9 @@ body, html {
     float:left;
     width:22%;
     height: 100%;
-    /* background-color: grey; */
+    background-image: url(../images/grey.jpg);
+    background-repeat: repeat-y;
+    align-content: center;
 }
 
 #center {
@@ -44,16 +46,52 @@ body, html {
 }
 
 #github {
-    width: 40%;
-    margin-top: 20px;
+    width: 50%;
+    margin: 10px;
 }
 
 #stackoverflow {
-    width: 60%;
+    width: 70%;
+    margin: 15px;
 }
 
 #twitter {
-    width: 40%;
+    margin: 10px;
+    width: 50%;
+}
+
+#github-container {
+    width: 80%;
+    margin: 20px;
+    height: 70px;
+    background-color: #07E4E1;
+    border-radius: 60px;
+    align-content: center;
+    box-shadow: 5px 10px 10px #222222;
+    position: relative;
+}
+
+#stackoverflow-container {
+    width: 80%;
+    margin: 20px;
+    height: 70px;
+    background-color: #07E4E1;
+    border-radius: 60px;
+    align-content: center;
+    box-shadow: 5px 10px 10px #222222;
+    position: relative;
+}
+
+#twitter-container {
+    width: 80%;
+    height: 100px;
+    margin: 20px;
+    height: 70px;
+    background-color: #07E4E1;
+    border-radius: 60px;
+    align-content: center;
+    box-shadow: 5px 10px 10px #222222;
+    position: relative;
 }
 
 #header {
@@ -103,4 +141,13 @@ body, html {
     font-size: 18px;
     text-align: justify;
     padding: 10px;
+}
+
+a {
+    position:absolute;
+    top:0px;
+    left:0px;
+    width:100%;
+    height:100%;
+    display:inline;
 }
